--- a/Top_Words.ipynb
+++ b/Top_Words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1040,14 +1040,14 @@
        " ...]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DATA = '/Users/jane/Desktop/search+youtube_v4/8_41.csv'\n",
-    "\n",
+    "# DATA = '/Users/jane/Desktop/search+youtube_v4/8_41.csv'\n",
+    "DATA = '/Users/miriamblumenthal/Desktop/Desktop/GoogleTake2/search+youtube_v4/8_41.csv'\n",
     "df = pd.read_csv(DATA)\n",
     "data = df.dropna(subset=['query'])\n",
     "\n",
@@ -1060,17 +1060,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize_stem(df):\n",
     "    searches = df['query'].tolist()\n",
     "    tokens = []\n",
-    "    punct_list ={'-',':','&','|', 'https', '...', ','}\n",
+    "    punct_list ={'-',':','&','|', 'https', '...', ',', '?', '+', '(', ')', '*', '$', '@', '%', '^', '~'}\n",
     "    for q in searches:\n",
     "        sublist = word_tokenize(q)\n",
     "        for token in sublist:\n",
+    "            token = token.lower()\n",
     "            if token not in stop_words | punct_list:\n",
     "                tokens.append(token)\n",
     "    return tokens\n",
@@ -1078,46 +1079,31 @@
     "                  \n",
     "                  \n",
     "def top_ten(searchlist):\n",
-    "    return pd.Series(searchlist).value_counts().sort_values(ascending = False)"
+    "    df = pd.Series(searchlist).value_counts().sort_values(ascending = False).to_frame().reset_index()\n",
+    "    df_new = df.rename(columns={'index':'words'})\n",
+    "    df_new = df_new.head(10)\n",
+    "    return df_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2020         357\n",
-       "flights      181\n",
-       "returning    147\n",
-       "Mar          139\n",
-       "LIM          121\n",
-       "            ... \n",
-       "Nicki          1\n",
-       "Dahmer         1\n",
-       "dr             1\n",
-       "BIC            1\n",
-       "Quick          1\n",
-       "Length: 4962, dtype: int64"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_ten(tokenize_stem(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_new = top_ten(tokenize_stem(data))\n",
+    "listOfStr = df_new['words'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictOfWords = { i : listOfStr[i] for i in range(0, len(listOfStr) ) }\n",
+    "print(dictOf)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1143,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
