--- a/Top_Words.ipynb
+++ b/Top_Words.ipynb
@@ -2,7 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting seaborn\n",
+      "  Downloading seaborn-0.10.1-py3-none-any.whl (215 kB)\n",
+      "\u001b[K     |████████████████████████████████| 215 kB 2.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: matplotlib>=2.1.2 in /Users/miriamblumenthal/.local/lib/python3.7/site-packages (from seaborn) (3.2.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /Users/miriamblumenthal/opt/anaconda3/envs/covidProject/lib/python3.7/site-packages (from seaborn) (1.18.1)\n",
+      "Collecting scipy>=1.0.1\n",
+      "  Downloading scipy-1.5.1-cp37-cp37m-macosx_10_9_x86_64.whl (28.7 MB)\n",
+      "\u001b[K     |████████████████████████████████| 28.7 MB 6.5 MB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=0.22.0 in /Users/miriamblumenthal/opt/anaconda3/envs/covidProject/lib/python3.7/site-packages (from seaborn) (1.0.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/miriamblumenthal/.local/lib/python3.7/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/miriamblumenthal/.local/lib/python3.7/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/miriamblumenthal/opt/anaconda3/envs/covidProject/lib/python3.7/site-packages (from matplotlib>=2.1.2->seaborn) (2.8.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/miriamblumenthal/.local/lib/python3.7/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /Users/miriamblumenthal/opt/anaconda3/envs/covidProject/lib/python3.7/site-packages (from pandas>=0.22.0->seaborn) (2020.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/miriamblumenthal/opt/anaconda3/envs/covidProject/lib/python3.7/site-packages (from python-dateutil>=2.1->matplotlib>=2.1.2->seaborn) (1.15.0)\n",
+      "Installing collected packages: scipy, seaborn\n",
+      "Successfully installed scipy-1.5.1 seaborn-0.10.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +63,8 @@
     "stemmer = ps()\n",
     "from nltk.stem.cistem import Cistem\n",
     "from nltk.tokenize import word_tokenize\n",
-    "stop_words = set(stopwords.words('english'))"
+    "stop_words = set(stopwords.words('english'))\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -1195,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
